# resume

./: .gitignore  README.md  generate.py  init.sh  package-lock.json  pyproject.toml  pyproject.toml.org
.github/workflows/: static.yml
coding_challenges/: change.py
docs/browser/: index.html  main-MFBQBQZG.js  main-QPAPLIKP.js  styles-XRZ55JWW.css
hire-matt/: angular.json  package-lock.json  package.json
hire-matt/docs/: README.md
hire-matt/src/: index.html  main.ts  styles.scss
hire-matt/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
