[project]
name = "resume"
version = "0.1.0"
authors = [
    {name = "Matthew Martin", email = "matthewdeanmartin@gmail.com"},
]
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "python-docx",
]

[dependency-groups]
dev = ["mypy>=1.8.0", "pylint>=3.0.2", "ruff", "pytest>=7.4.3", "pytest-cov>=4.1.0", "pytest-snapshot", "pytest-asyncio", "pytest-network", "time-machine", "pytest-mock>=3.14.0", "hypothesis>=6.99.13", "tox", "pytest-django", "black>=23.11.0", "pre-commit>=3.8.0", "interrogate>=1.5.0", "pydoctest>=0.1.22", "pdoc3>=0.10.0", "mdformat>=0.7.17", "linkcheckmd>=1.4.0", "codespell>=2.2.6", "pyenchant>=3.2.2", "metametameta>=0.1.0"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "6.0"
#testpaths = [
#    "test",
#    "tests",
#    "test_*.py"
#]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]

DJANGO_SETTINGS_MODULE = "json_editor_host.settings"
